--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src=""
+    <img src="logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
@@ -12,18 +12,17 @@
 Somos uma nova empresa de tortas com temáticas inspiradas em filmes!  </p>
  <h3>  ➣Pica-Pau: Manteiga Escocesa</h3>
  <!--imagens e links-->
-<img src="picapau" height="250px"
-width="350px"/>
-
+ <img src="picapau.webp" height="250px"
+ width="350px"/>
  <p>Nossa "torta do Pica-Pau" é uma torta com massa amanteigada,</p>
  <p>recheio de caramelo e uma deliciosa camada de cobertura de chocolate!</p>
  <p>
-    <a href=""
+    <a href="https://www.youtube.com/watch?v=OEoh9fy2IVM"
     target="_blank">Pica-Pau</a>
  </p>
  <h3>  ➣As Branquelas: Torta Holandesa</h3>
 <!--imagens e links-->
-<img src="asbranquelas.jpeg" height="250px"
+<img src="branquelas.webp" height="250px"
 width="350px"/>
 <p>Nossa torta holandesa "As Branquelas" é uma torta de massa amanteigada</p>
 <p>com uma camada de creme branco e uma deliciosa cobertura de ganache de chocolate meio amargo</p>
@@ -33,5 +32,14 @@ width="350px"/>
 <a href="https://www.youtube.com/watch?v=gEC8h3IMgXg"
 target="_blank">As Branquelas</a>
 </p>
+
+<h3> ➣A Fuga das Galinhas: Torta de frango</h3>
+<!--imagens e links-->
+<img src="galinha.jpeg" height="250px"
+width="350px"/>
+<p>Nossa torta de frango "A fuga das galinhas" é uma torta composta </p>
+<p>por uma deliciosa camada de requeijao cremoso e recheio de frango desfiado</p>
+<a href="https://www.youtube.com/watch?v=MJXpcq4Ouv4"
+    target="_blank">A Fuga das Galinhas</a>
 </body>
 </html>
